// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario 1 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 1 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 1 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 1 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Will Be Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number and mailing address. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail for the 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800). It will explain the issue and help you prepare for the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will schedule a phone interview to determine your eligibility for benefits. This page will be updated with appointment details once your interview is scheduled.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <strong>
        <span
          className="text-line"
        >
          Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
        </span>
      </strong>
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you do not receive a call from the EDD at your scheduled appointment time, we may have canceled your appointment because we confirmed your eligibility or resolved the issue before your interview.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If your appointment has been canceled, it will no longer display on your UI Online homepage.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <strong>
        <span
          className="text-line"
        >
          Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
        </span>
      </strong>
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you do not receive a call from the EDD at your scheduled appointment time, we may have canceled your appointment because we confirmed your eligibility or resolved the issue before your interview.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If your appointment has been canceled, it will no longer display on your UI Online homepage.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <strong>
        <span
          className="text-line"
        >
          Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
        </span>
      </strong>
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you do not receive a call from the EDD at your scheduled appointment time, we may have canceled your appointment because we confirmed your eligibility or resolved the issue before your interview.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If your appointment has been canceled, it will no longer display on your UI Online homepage.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 2 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Phone Interview Scheduled
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified a potential issue that could make you ineligible for benefits. You have a phone interview scheduled for:
    </div>
    <div
      className="appointment"
    >
      <strong>
        <span
          className="text-line"
        >
          Wednesday, May 12, 2021, between 1–3 p.m. Pacific time
        </span>
      </strong>
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you miss your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Confirm we have your current phone number. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          , select 
          <strong>
            Profile
          </strong>
           from the main menu, then select 
          <strong>
            Contact Information
          </strong>
          .
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Prepare for the interview. The 
          &lt;em&gt;Notification of Unemployment Insurance Benefits Eligibility Interview&lt;/em&gt;
           (DE 4800) includes the questions the interviewer is most likely to ask.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you need to reschedule your interview, select 
          <strong>
            Reschedule
          </strong>
           in the Appointments section on your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          . You must reschedule at least one day before the interview.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will call you during your scheduled interview time. Your caller ID may show “St of CA EDD” or the UI Customer Service number 1-800-300-5616.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you do not receive a call from the EDD at your scheduled appointment time, we may have canceled your appointment because we confirmed your eligibility or resolved the issue before your interview.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If your appointment has been canceled, it will no longer display on your UI Online homepage.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you are found eligible and no other issues are identified, we will pay you for all pending weeks.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are found not eligible, we will mail you a 
                &lt;em&gt;Notice of Determination&lt;/em&gt;
                 (DE 1080CZ) with the reasons you were denied benefits and an 
                &lt;em&gt;Appeal Form&lt;/em&gt;
                 (DE 1000M). If you disagree with the decision, you have the right to appeal.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are paid benefits and are later found not eligible, we will also mail you a 
                &lt;em&gt;Notice of Overpayment&lt;/em&gt;
                 (DE 1444) that explains why you were overpaid.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you are found eligible and no other issues are identified, we will pay you for all pending weeks.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are found not eligible, we will mail you a 
                &lt;em&gt;Notice of Determination&lt;/em&gt;
                 (DE 1080CZ) with the reasons you were denied benefits and an 
                &lt;em&gt;Appeal Form&lt;/em&gt;
                 (DE 1000M). If you disagree with the decision, you have the right to appeal.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are paid benefits and are later found not eligible, we will also mail you a 
                &lt;em&gt;Notice of Overpayment&lt;/em&gt;
                 (DE 1444) that explains why you were overpaid.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you are found eligible and no other issues are identified, we will pay you for all pending weeks.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are found not eligible, we will mail you a 
                &lt;em&gt;Notice of Determination&lt;/em&gt;
                 (DE 1080CZ) with the reasons you were denied benefits and an 
                &lt;em&gt;Appeal Form&lt;/em&gt;
                 (DE 1000M). If you disagree with the decision, you have the right to appeal.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are paid benefits and are later found not eligible, we will also mail you a 
                &lt;em&gt;Notice of Overpayment&lt;/em&gt;
                 (DE 1444) that explains why you were overpaid.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 3 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Pending Eligibility — Under Review
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Your phone interview time has passed and your eligibility for benefits is under review.
    </div>
    <div
      className="summary-section"
    >
      <strong>
        Important
      </strong>
      : If you missed your phone interview, a decision will be made based on the available facts, which could result in your unemployment benefits being delayed or denied.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Allow up to 10 days for the EDD to make a decision.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will determine your eligibility.
          <div
            className="sub-bullets"
          >
            <ul>
              <li
                className="next-step"
              >
                If you are found eligible and no other issues are identified, we will pay you for all pending weeks.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are found not eligible, we will mail you a 
                &lt;em&gt;Notice of Determination&lt;/em&gt;
                 (DE 1080CZ) with the reasons you were denied benefits and an 
                &lt;em&gt;Appeal Form&lt;/em&gt;
                 (DE 1000M). If you disagree with the decision, you have the right to appeal.
                <div
                  className="sub-bullets"
                />
              </li>
              <li
                className="next-step"
              >
                If you are paid benefits and are later found not eligible, we will also mail you a 
                &lt;em&gt;Notice of Overpayment&lt;/em&gt;
                 (DE 1444) that explains why you were overpaid.
                <div
                  className="sub-bullets"
                />
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there are weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            Claim Status: Pending Payment
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there are weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Continue to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
           while we determine your eligibility.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            Claim Status: Pending Payment
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there aren't weeks to certify, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            Claim Status: Pending Payment
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 4 matches when there aren't weeks to certify, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Review Required
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      We identified an issue and may need to determine your eligibility or verify your information.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          For more information, visit 
          <a
            href="https://www.edd.ca.gov/unemployment/claim-status.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            Claim Status: Pending Payment
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will contact you if we need more information to resolve the issue.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 5 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      No Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      You currently have no weeks available to certify for benefits.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If it’s been more than 30 days since you last certified for benefits, you must 
          <a
            href="https://edd.ca.gov/Unemployment/Reopen-A-Claim.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            reopen your claim
          </a>
           before you can certify.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 5 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      No Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      You currently have no weeks available to certify for benefits.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Check your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and inbox for the latest updates.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          Check your mail. We may send requests for additional information. Make sure to respond as requested to avoid delays in processing your claim.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If it’s been more than 30 days since you last certified for benefits, you must 
          <a
            href="https://edd.ca.gov/Unemployment/Reopen-A-Claim.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            reopen your claim
          </a>
           before you can certify.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          We will email you when you have weeks available to 
          <a
            href="https://edd.ca.gov/Unemployment/certify.htm"
            rel="noopener noreferrer"
            target="_blank"
          >
            certify for benefits
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 6 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      You have weeks available to 
      <a
        href="https://edd.ca.gov/Unemployment/certify.htm"
        rel="noopener noreferrer"
        target="_blank"
      >
        certify for benefits
      </a>
      .
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Select 
          <strong>
            Certify for Benefits
          </strong>
           in the Notification section on your 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          When we process your certification, we will update the payment status. Go to the 
          <a
            href="https://uio.edd.ca.gov/UIO/Pages/ExternalUser/ClaimantAccountManagement/UIOnlineHome.aspx"
          >
            UI Online homepage
          </a>
           and select 
          <strong>
            History
          </strong>
           from the main menu.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 6 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Weeks Available to Certify
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      You have weeks available to 
      <a
        href="https://edd.ca.gov/Unemployment/certify.htm"
        rel="noopener noreferrer"
        target="_blank"
      >
        certify for benefits
      </a>
      .
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          Select 
          <strong>
            Certify for Benefits
          </strong>
           in the Notification section on your 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
          .
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          When we process your certification, we will update the payment status. Go to the 
          <a
            href="https://uiom.edd.ca.gov/UIOM/Pages/Public/ExternalUser/UIOMobileLandingPage.aspx"
          >
            UI Online homepage
          </a>
           and select 
          <strong>
            History
          </strong>
           from the main menu.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 7 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Your benefit year has ended on your regular Unemployment Insurance claim. Although you have a claim balance remaining, you cannot be paid for additional weeks as your claim has expired.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 7 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Your benefit year has ended on your regular Unemployment Insurance claim. Although you have a claim balance remaining, you cannot be paid for additional weeks as your claim has expired.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 8 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Federal extension benefits have ended. Although you have a federal extension with a balance remaining, federal law does not allow benefits to be paid for weeks of unemployment after the program ends.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 8 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Federal extension benefits have ended. Although you have a federal extension with a balance remaining, federal law does not allow benefits to be paid for weeks of unemployment after the program ends.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 9 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Pandemic Unemployment Assistance benefits have ended. Although you have PUA claim balance remaining, federal law does not allow benefits to be paid for weeks of unemployment after the program ends.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 9 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Pandemic Unemployment Assistance benefits have ended. Although you have PUA claim balance remaining, federal law does not allow benefits to be paid for weeks of unemployment after the program ends.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 10 matches, on desktop 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Disaster Unemployment Assistance benefits has ended. Although you have a claim balance remaining, you cannot be paid for additional weeks as DUA benefits are payable only for weeks that fall within the Disaster Assistance Period.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Scenario 10 matches, on mobile 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Benefits Expired
    </h3>
  </div>
  <div
    className="summary"
  >
    <div
      className="summary-section"
    >
      Disaster Unemployment Assistance benefits has ended. Although you have a claim balance remaining, you cannot be paid for additional weeks as DUA benefits are payable only for weeks that fall within the Disaster Assistance Period.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          You currently have no weeks available to certify.
          <div
            className="sub-bullets"
          />
        </li>
        <li
          className="next-step"
        >
          If you earned enough wages from an employer in the past 18 months and are still unemployed or working part time, you can apply for regular unemployment benefits.
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          None at this time
          <div
            className="sub-bullets"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;
